Afegida teoria a Probabilitat

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -177,6 +177,7 @@
 \newcommand{\rapidesa}{v}
 \newcommand{\transposta}{\top}
 \newcommand{\extensio}{/}%{\hookrightarrow}
+\newcommand{\sota}{\mid}
 
 \newcommand{\sii}{\iff}
 \newcommand{\Sii}{\Longleftrightarrow}
