Afegit placeholder pel foreword (coprefaci per ara)

--- a/NovoTeX/Main.tex
+++ b/NovoTeX/Main.tex
@@ -391,7 +391,8 @@
 %	\listoftables
 	}
 }
-\newcommand{\foreword}{} % Aure % Buscar com es diu en català. Potser dir-li prefaci i ja
+\newcommand{\coprefaci}{def}
+%\newcommand{\foreword}{} % Aure % Buscar com es diu en català. Potser dir-li prefaci i ja
 \newcommand{\prefaci}{}
 \newcommand{\agraiments}{
 	\subfile{FrontMatter/Agraiments.tex}
@@ -455,7 +456,8 @@
 	\dedicacio
 	\epigraf
 	\tauladecontinguts
-	\foreword
+	\coprefaci
+%	\foreword
 	\prefaci
 	\agraiments
 	\lletresgregues
