--- a/NovoTeX/FrontMatter/LletresGregues.tex
+++ b/NovoTeX/FrontMatter/LletresGregues.tex
@@ -1,8 +1,8 @@
 \documentclass[../Main.tex]{subfiles}
 
 \begin{document}
-\cleartoevenpage[\thispagestyle{empty}]
-\newpage
+%\cleartoevenpage[\thispagestyle{empty}]
+%\newpage
 \chapter*{Lletres gregues}
 \begin{table}[h]\centering
 	\caption{Llista de lletres gregues}
