--- a/parts/Intro.tex
+++ b/parts/Intro.tex
@@ -112,6 +112,9 @@
 	\begin{proposition}
 		Sigui \(f\colon[a,b]\to\mathbb{R}\) una funció acotada i monòtona. Aleshores \(f\) és integrable Riemann.
 	\end{proposition}
+	\begin{proposition}
+		Sigui~\(f\colon[a,b]\longrightarrow\RR\) una funció monòtona. Aleshores el conjunt de punts de discontinuïtat de~\(f\) és com a màxim numerable.
+	\end{proposition}
 	\subsection{Teoremes}
 	\begin{theorem}[Equivalència entre normes]
 		\labelname{Teorema de l'equivalència entre normes}\label{thm:Equivalència de normes}
