Afegida teoria a Probabilitat

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -206,7 +206,7 @@
 \newcommand{\Lie}{\mathcal{L}}
 \newcommand{\ev}{\mathrm{ev}}
 \newcommand{\discriminant}{\Delta}
-\newcommand{\Probabilitat}{P}
+\newcommand{\Probabilitat}{\mathrm{P}}
 \newcommand{\igualsendistribucio}{\overset{\mathcal{L}}{=}}
 \newcommand{\igualsquasisegurament}{\qs}
 \newcommand{\quasisegurament}{\qs}
@@ -215,6 +215,11 @@
 
 \newcommand{\heads}{\mathrm{H}}
 \newcommand{\tails}{\mathrm{T}}
+\newcommand{\Unif}{\mathrm{Unif}}
+\newcommand{\Binomial}{\mathrm{Bin}}
+\newcommand{\Poiss}{\mathrm{Poiss}}
+\newcommand{\Geom}{\mathrm{Geom}}
+\newcommand{\HGeom}{\mathrm{HGeom}}%{\mathrm{HyperGeom}}
 
 \newcommand{\RR}{\field{R}}
 \newcommand{\QQ}{\field{Q}}
