Afegida teoria a Probabilitat fins abans de vectors aleatoris

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -124,6 +124,7 @@
 \DeclareMathOperator{\grau}{grau}
 \DeclareMathOperator{\Id}{Id}
 \DeclareMathOperator{\parts}{\mathcal{P}}
+\DeclareMathOperator{\ind}{1}
 \DeclareMathOperator{\GrupSimetric}{S}
 \DeclareMathOperator{\GrupAlternat}{Alt}
 \DeclareMathOperator{\Mou}{M}
@@ -220,6 +221,10 @@
 \newcommand{\Poiss}{\mathrm{Poiss}}
 \newcommand{\Geom}{\mathrm{Geom}}
 \newcommand{\HGeom}{\mathrm{HGeom}}%{\mathrm{HyperGeom}}
+\newcommand{\Exp}{\mathrm{Exp}}
+\newcommand{\Gauss}{\mathcal{N}}
+\newcommand{\Gamm}{\mathrm{Gamma}}
+\newcommand{\Beta}{\mathrm{Beta}}
 
 \newcommand{\RR}{\field{R}}
 \newcommand{\QQ}{\field{Q}}
