Afegida teoria a Teoria de Galois

--- a/Apunts.tex
+++ b/Apunts.tex
@@ -154,6 +154,8 @@
 \DeclareMathOperator{\divergencia}{div}
 \DeclareMathOperator{\Irr}{Irr}
 \DeclareMathOperator{\Gal}{Gal}
+\DeclareMathOperator{\ReticleGrup}{\mathcal{L}}
+\DeclareMathOperator{\ReticleCos}{\mathcal{L}}
 
 \DeclareMathOperator*{\suport}{Supp}
 
