Arreglat typo a EDOS I

--- a/parts/EDOS1.tex
+++ b/parts/EDOS1.tex
@@ -391,7 +391,7 @@
 		\labelname{família de funcions equicontínua en un punt}\label{def:família de funcions equicontínua en un punt}
 		\labelname{família de funcions equicontínua}\label{def:família de funcions equicontínua}
 		\labelname{família de funcions uniformement equicontínua}\label{def:família de funcions uniformement equicontínua}
-		Siguin \(H\) un una família de funcions de \(\mathcal{C}_{b}(X,T)\) i \(x\) un punt de \(X\) tal que per a tot \(\varepsilon>0\) existeix un entorn \(N_{x}\) de \(x\) tal que per a tot \(y\) de \(N_{x}\) i \(f\) de \(H\) es satisfà
+		Siguin \(H\) una família de funcions de \(\mathcal{C}_{b}(X,T)\) i \(x\) un punt de \(X\) tal que per a tot \(\varepsilon>0\) existeix un entorn \(N_{x}\) de \(x\) tal que per a tot \(y\) de \(N_{x}\) i \(f\) de \(H\) es satisfà
 		\[\norm{f(y)-f(x)}<\varepsilon.\]
 		Aleshores direm que \(H\) és equicontínua en \(x\). Si \(H\) és equicontínua en \(x\) per a tot \(x\) de \(X\) direm que \(H\) és equicontínua en \(X\).
 		
